kubernetes/ingress/backend-go-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-go
  namespace: student-jvaldebenito
  annotations:
    external-dns.alpha.kubernetes.io/target: proxy.inf.uct.cl
spec:
  ingressClassName: nginx
  rules:
    - host: backend-jvaldebenito.dev.censei.cl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend-go-svc
                port:
                  number: 3001
